Further alignment fixes.

--- a/skills.css
+++ b/skills.css
@@ -204,28 +204,28 @@ a.githubLink:hover {
 
 
 @media (max-width: 1450px) {
-	img.projectsImage,
-	img.imageTest {
-		height: 300px;
-		width: 300px;
-		flex-direction: column;
-		margin-left: auto;
-		margin-right: auto;
-		align-items: center;
-	}
+    img.projectsImage {
+        height: 300px;
+        width: 300px;
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+    }
+
     div.flexTest {
-    flex-direction: column;
+        flex-direction: column;
         align-items: center;
-        width: 100%; 
-        margin: 0; 
+        width: 100%;
+        margin: 0;
         padding: 20px;
-	}
-	div.textboxTest {
-		padding-right: 0;
-		text-align: center;
-		padding-top: 0px;
-		width: auto;
-		height: auto;
-		margin: auto;
-	}
-	}
+    }
+
+    div.textboxTest {
+        padding-right: 0;
+        text-align: center;
+        padding-top: 0px;
+        width: auto;
+        height: auto;
+        margin: auto;
+    }
+}
